--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -18,13 +18,13 @@
                 <p>* [Required information]</p>
                 <div style = font-size:20px; font-weight:bold; margin-left:150px;>
                     {{ form.email.label }}
-                    {{ form.email }}<br>
+                    {{ form.email(maxlength=254) }}<br>
                     
                     {{ form.username.label }}
-                    {{ form.username }}<br>
+                    {{ form.username(maxlength=30) }}<br>
                     
                     {{ form.display_name.label }}
-                    {{ form.display_name }}<br>
+                    {{ form.display_name(maxlength=32) }}<br>
                     
                     {{ form.password.label }}
                     {{ form.password }}<br>
@@ -35,16 +35,14 @@
                     {{ form.submit }}
                     </div>
             </fieldset>
-
-
-            <!--
+            <!-- OLD FORM
             <p>Email* <input type="email" name="email" maxlength="254"/></p>
             <p>Username* <input type="text" name="username" maxlength="30"/></p>
             <p>Display Name <input type="text" name="display_name" maxlength="32"/></p>
             <p>Password* <input type="password" name="password" /></p>
             <p>Re-enter password* <input type="password" name="password_check" /></p>
             <p>Submit <input type="submit" value="Submit" /></p>
-            -->
+            -->     
         </form>
         <h3>Already have an account?</h3>
         <p><a href="{{ url_for('login') }}">Log in here!</a></p>        
