--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,6 @@
 <html>
     <body>
+        
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 <ul class = flashes>
@@ -9,12 +10,29 @@
                 </ul>
             {% endif %}
         {% endwith %}
+
         <form action="" method="POST">
+            {{ form.hidden_tag() }}
+            <div style = font-size:20px; font-weight:bold; margin-left:150px;>
+                {{ form.email.label }}
+                {{ form.email(maxlength=254) }}<br>
+
+                {{ form.password.label }}
+                {{ form.password }}<br>
+
+                {{ form.remember.label }}
+                {{ form.remember }}<br>
+
+                {{ form.submit }}
+            </div>
+            <!-- OLD FORM
             <p>Email <input type="email" name="email" maxlength="254"/></p>
             <p>Password <input type="password" name="password"/></p>
             <p><input type="checkbox" name="remember">Remember me</p>
             <p><input type="submit" value="Submit" /></p>
+            -->
         </form>
+        
         <h3>Don't have an account yet? Start stalking!</h3>
         <p><a href="{{ url_for('register') }}">Register here!</a></p>
     </body>
