--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -35,16 +35,8 @@
                     {{ form.submit }}
                     </div>
             </fieldset>
-            <!-- OLD FORM
-            <p>Email* <input type="email" name="email" maxlength="254"/></p>
-            <p>Username* <input type="text" name="username" maxlength="30"/></p>
-            <p>Display Name <input type="text" name="display_name" maxlength="32"/></p>
-            <p>Password* <input type="password" name="password" /></p>
-            <p>Re-enter password* <input type="password" name="password_check" /></p>
-            <p>Submit <input type="submit" value="Submit" /></p>
-            -->     
         </form>
         <h3>Already have an account?</h3>
-        <p><a href="{{ url_for('login') }}">Log in here!</a></p>        
+        <p><a href="{{ url_for('index') }}">Log in here!</a></p>        
     </body>
 </html>
