--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,7 +1,6 @@
-<html>
-    <body>
-        <p>Make a new post</p>
-        <p>create new category</p>
-        <p>dropdown category</p>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <p>Make a new post</p>
+    <p>create new category</p>
+    <p>dropdown category</p>
+{% endblock %}
