--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
         <hr>
         <p>  
             Don't have an account yet?<br>
-            Grab those binoculars ∞
+            Grab your binoculars ∞
             <a href="{{ url_for('register') }}">Register here!</a>
         </p>
     </div>       
