--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% from "macros.html" import flashes %}
 {% block content %}
-    <div class="login-container">
+    <div class="acct-form-container login-container">
         <p>
             <span class="headline">Come <span class="highlight">stalk</span> your friends.</span><br>
             <span class="tagline">We know you want to ;)</span>
@@ -19,7 +19,7 @@
         <p>  
             Don't have an account yet?<br>
             Grab your binoculars ∞
-            <a href="{{ url_for('register') }}">Register here!</a>
+            <a href="{{ url_for('register') }}">Register now!</a>
         </p>
     </div>       
 {% endblock %}
