--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,41 +1,28 @@
 {% extends "base.html" %}
+{% from "macros.html" import flashes %}
 {% block content %}
-    <form action="" method="POST">
-        <fieldset>
-            <legend>Register Form</legend>
-            {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                    <p>Please fix the following errors:</p>
-                    <ul class=flashes>
-                    {% for message in messages %}
-                    <li>{{ message }}</li>
-                    {% endfor %}
-                    </ul>
-                {% endif %}
-            {% endwith %}
+    <div class="acct-form-container">
+        <p>
+            <span class="headline">Become a <span class="highlight">stalker</span> today.</span><br>
+            <span class="tagline">It's ok. Your friends are stalking you, too.</span>
+        </p>
+        <form action="" method="POST">
+            {{ flashes("Please fix the following errors:") }}
 
             {{ form.hidden_tag() }}
             <p>* [Required information]</p>
-            <div style = font-size:20px; font-weight:bold; margin-left:150px;>
-                {{ form.email.label }}
-                {{ form.email(maxlength=254) }}<br>
-                
-                {{ form.username.label }}
-                {{ form.username(maxlength=30) }}<br>
-                
-                {{ form.display_name.label }}
-                {{ form.display_name(maxlength=32) }}<br>
-                
-                {{ form.password.label }}
-                {{ form.password }}<br>
+            {{ form.email(maxlength=254, placeholder=form.email.description) }}<br>
+            {{ form.username(maxlength=30, placeholder=form.username.description) }}<br>
+            {{ form.display_name(maxlength=32, placeholder=form.display_name.description) }}<br>
+            {{ form.password(placeholder=form.password.description) }}<br>
+            {{ form.password_check(placeholder=form.password_check.description) }}<br><br>
 
-                {{ form.password_check.label }}
-                {{ form.password_check }}<br><br>
-
-                {{ form.submit }}
-                </div>
-        </fieldset>
-    </form>
-    <h3>Already have an account?</h3>
-    <p><a href="{{ url_for('index') }}">Log in here!</a></p>        
+            {{ form.submit }}
+        </form>
+        <hr>
+        <p>  
+            Already have an account?<br>
+            <a href="{{ url_for('index') }}">Log in here!</a>
+        </p>
+    </div>       
 {% endblock %}
