--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,13 +6,14 @@
             <span class="headline">Come <span class="highlight">stalk</span> your friends.</span><br>
             <span class="tagline">We know you want to ;)</span>
         </p>
-        <p><form action="" method="POST">
+        <p><form action="" method="POST" class="form-container">
             {{ form.hidden_tag() }}
             {{ form.email(maxlength=254, placeholder=form.email.description) }}<br>
             {{ form.password(placeholder=form.password.description) }}<br>
-            {{ form.remember.label }}
-            {{ form.remember }}
-            {{ form.submit }}
+            <div class="login-submit-container">
+                <div class="remember-me-box"><span class="small-text">{{ form.remember.label }}{{ form.remember }}</span></div>
+                {{ form.submit }}
+            </div>
         </form></p>
         {{ flashes() }}
         <hr>
