--- a/app/static/default.css
+++ b/app/static/default.css
@@ -30,6 +30,10 @@ a:hover {
     background-color: var(--color-bg);
 }
 
+.small-text {
+    font-size: 0.8em;
+}
+
 .content-container {
     position: relative;
     padding: 1em;
@@ -94,7 +98,6 @@ a:hover {
 .flashes-container {
     color: var(--color-highlight);
     font-size: 0.8em;
-    padding: 1em;
 }
 
 .flashes-container fieldset {
@@ -125,28 +128,50 @@ a:hover {
     text-align: center;
 }
 
-.acct-form-container input {
+.form-container {
+    position: relative;
+    margin: auto;
+    width: 80%;
+}
+
+.form-container input {
     font-family: var(--font-main);
     font-size: 1em;
     padding: 0.5em;
-    margin: 0.12em;
+    margin-top: 0.12em;
+    margin-bottom: 0.12em;
+    box-sizing: border-box;
 }
 
-.acct-form-container input[type='text'], input[type='password'] {
-    width: 18em;
+.form-container input[type='text'], input[type='password'] {
+    width: 100%;
 }
 
-.acct-form-container input[type='submit'] {
-    width: 9em;
+.form-container input[type='submit'] {
+    width: 100%;
     font-weight: bold;
     cursor: pointer;
     background-color: var(--color-highlight);
     border-color: var(--color-highlight);
 }
 
+.login-submit-container {
+    position: relative;
+    width: 100%;
+    height: 3em;
+}
+
+.remember-me-box {
+    position: absolute;
+    left: 0;
+    margin: 0.5em;
+    display: inline-block;
+}
+
 .login-container input[type='submit'] {
-    margin: 0.25em;
-    margin-left: 2em;
+    position: absolute;
+    right: 0;
+    width: 50%;
 }
 
 .headline {
