--- a/app/static/default.css
+++ b/app/static/default.css
@@ -34,6 +34,10 @@ a:hover {
     font-size: 0.8em;
 }
 
+.highlight {
+    color: var(--color-highlight);
+}
+
 .content-container {
     position: relative;
     padding: 1em;
@@ -183,6 +187,20 @@ a:hover {
     font-size: 1.25em;
 }
 
-.highlight {
-    color: var(--color-highlight);
+.simple-form {
+    padding: 1em;
+}
+
+.simple-form input {
+    width: 50%;
+    padding: 0.2em;
+    margin: 0.1em;
+}
+
+.simple-form input[type='submit'] {
+    width: auto;
+    padding: 0.5em;
+    padding-top: 0.3em;
+    padding-bottom: 0.3em;
+    margin-top: 0.5em;
 }
