Updated account deletion to make it more user-friendly

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -2,7 +2,7 @@
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="flashes-container">
-                <fieldset>
+                <fieldset class="info-box">
                     {% if desc %}
                         <legend>{{ desc }}</legend>
                     {% endif %}
