--- a/app/static/default.css
+++ b/app/static/default.css
@@ -6,6 +6,7 @@
     --color-highlight: rgb(255, 166, 0);
     --color-link-highlight: rgb(255, 208, 0);
     --color-text: rgb(255, 255, 255);
+    --color-warning: rgb(255, 94, 0);
     --font-header: 'Poppins', sans-serif;
     --font-main: 'Open Sans', sans-serif;
 }
@@ -36,6 +37,10 @@ a:hover {
 
 .highlight {
     color: var(--color-highlight);
+}
+
+.warning {
+    color: var(--color-warning);
 }
 
 .content-container {
@@ -104,7 +109,7 @@ a:hover {
     font-size: 0.8em;
 }
 
-.flashes-container fieldset {
+.info-box {
     background-color: rgba(0, 0, 0, 0.2);
     padding: 1em;
     border-color: var(--color-text);
@@ -195,6 +200,7 @@ a:hover {
     width: 50%;
     padding: 0.2em;
     margin: 0.1em;
+    font-family: var(--font-main);
 }
 
 .simple-form input[type='submit'] {
@@ -203,4 +209,21 @@ a:hover {
     padding-top: 0.3em;
     padding-bottom: 0.3em;
     margin-top: 0.5em;
+}
+
+#delete-confirm {
+    display: none;
+}
+
+#delete-confirm input {
+    margin: 0.5em;
+    font-family: var(--font-main);
+}
+
+#delete-confirm input[type='password'] {
+    width: 30%;
+}
+
+#delete-confirm input[type='submit'] {
+    background-color: var(--color-warning);
 }
