--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% from "macros.html" import flashes %}
 {% block content %}
+    <head>
+        <script src="{{ url_for('static', filename='script.js') }}"></script> 
+    </head>
     <h1>Settings</h1>
     <fieldset class="simple-form">
         {{ flashes() }}
@@ -24,5 +27,18 @@
     </fieldset>
     <h3><a href="{{ url_for('dashboard') }}">Return to dashboard</a></h3>
     <h3><a href="{{ url_for('logout') }}">Log out</a></h3>
-    <h3><a href="{{ url_for('deactivate') }}">Delete account</a></h3>
+    <h3><a href="javascript:deleteConfirmation();">Delete account</a></h3>
+    <div id="delete-confirm">
+        <fieldset class="info-box">
+            <p>
+                Enter password to confirm account deletion.<br>
+                <span class="warning">*Warning* This is PERMANENT</span>
+            </p>
+            <form action="" method="POST">
+                {{ form_delete.password_del(placeholder=form_delete.password_del.description) }}
+                {{ form_delete.del_confirmation }}
+            </form>
+        </fieldset>
+    </div>
+    
 {% endblock %}
