--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,4 @@
-{% from "macros.html" import footer_link %}
+{% from "macros.html" import footer_link, search_bar %}
 
 <!doctype html>
 <html>
@@ -7,22 +7,34 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='default.css') }}">
     </head>
     <body>
+        <!-- HEADER -->
         <div class="header">
-            <div class="menu-container">
-                <svg id="svg-menu" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 122.88 96.91" style="enable-background:new 0 0 122.88 96.91" xml:space="preserve">
-                <style type="text/css">.st0{fill-rule:evenodd;clip-rule:evenodd;}</style>
-                <g><path class="st0" d="M122.88,0v20.05H33.2V0H122.88L122.88,0z M21.13,76.86v20.05H0V76.86H21.13L21.13,76.86z M21.13,38.43v20.05H0 V38.43H21.13L21.13,38.43z M21.13,0v20.05H0V0H21.13L21.13,0z M122.88,76.86v20.05H33.2V76.86H122.88L122.88,76.86z M122.88,38.43 v20.05H33.2V38.43H122.88L122.88,38.43z"/></g></svg>
-            </div>
             <div class="header-logo">
                 <a href="{{ url_for('index') }}">
                     <span class="highlight">stalk</span>back 
                     <span class="header-logo-bino"><span class="highlight">o</span>o</span>
                 </a>
             </div>
+            {% if current_user.is_authenticated %}
+                <div class="menu-container">
+                    <svg id="svg-menu" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 122.88 96.91" style="enable-background:new 0 0 122.88 96.91" xml:space="preserve">
+                    <style type="text/css">.st0{fill-rule:evenodd;clip-rule:evenodd;}</style>
+                    <g><path class="st0" d="M122.88,0v20.05H33.2V0H122.88L122.88,0z M21.13,76.86v20.05H0V76.86H21.13L21.13,76.86z M21.13,38.43v20.05H0 V38.43H21.13L21.13,38.43z M21.13,0v20.05H0V0H21.13L21.13,0z M122.88,76.86v20.05H33.2V76.86H122.88L122.88,76.86z M122.88,38.43 v20.05H33.2V38.43H122.88L122.88,38.43z"/></g></svg>
+                </div>
+            {% endif %}
         </div>
+
+        <!-- SEARCH BAR -->
+        {% if current_user.is_authenticated %}
+            {{ search_bar() }}
+        {% endif %}
+
+        <!-- CONTENT -->
         <div class="content-container">
             {% block content %}{% endblock %}
         </div>
+
+        <!-- FOOTER -->
         <div class="footer">
             © 2021 Alinda Heng
             <div class="footer-links-container">
