--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,4 +1,11 @@
 {% extends "base.html" %}
+{% from "macros.html" import search_bar%}
+
+<!-- SEARCH BAR -->
+{% block search_bar %}
+    {{ search_bar(sb) }}
+{% endblock %}
+
 {% block content %}
     <h1>Hi, {{ current_user.display_name }}</h1>
     <h3><a href="{{ url_for('profile', username = current_user.username) }}">My Profile</a></h3>
