--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -2,7 +2,7 @@
 {% from "macros.html" import search_bar%}
 
 <!-- SEARCH BAR -->
-{% block search_bar %}
+{% block content_header %}
     {{ search_bar(sb) }}
 {% endblock %}
 
