--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
         </div>
 
         <!-- SEARCH BAR -->
-        {% block search_bar %}{% endblock %}
+        {% block content_header %}{% endblock %}
 
         <!-- CONTENT -->
         <div class="content-container">
