--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,5 +1,19 @@
-<html>
-    <body>
-        <p>Welcome to {{ username }}'s profile!</p>
-    </body>
-</html>
+{% extends "base.html" %}
+
+{% block content_header %}
+    <div class="prof-header">
+        <img class="user-av" src="{{ user.avatar_url }}">
+        <p>
+            <span style="font-size: 1.5em;">{{ user.display_name }} (@{{ user.username }})</span><br>
+            <span class="small-text">tagline here</span>
+        </p>
+    </div>
+{% endblock %}
+
+{% block content %}
+    {% for post in posts %}
+        <p>
+            {{ post.author.username }} says: <b>{{ post.body }}</b>
+        </p>
+    {% endfor %}
+{% endblock %}
