--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -4,7 +4,7 @@
     <div class="prof-header">
         <img class="user-av" src="{{ user.avatar_url }}">
         <p>
-            <span style="font-size: 1.5em;">{{ user.display_name }} (@{{ user.username }})</span><br>
+            <span style="font-size: 1.5em;">{{ user.display_name }}<br>(@{{ user.username }})</span><br>
             <span class="small-text">tagline here</span>
         </p>
     </div>
