--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -7,7 +7,19 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Hi, {{ current_user.display_name }}</h1>
+    <div style="background-color: var(--color-header);">
+        <table>
+            <td class="user-av-med" style="padding: 0.5em">
+                <a href="{{ url_for('profile', username = current_user.username) }}">
+                    <img src="{{ current_user.avatar_url }}" class="user-av-med"></a>
+            </td>
+            <td style="padding: 0.5em">
+                Hi, {{ current_user.display_name }}
+                <br>
+                Let's get stalking!
+            </td>
+        </table>
+    </div>
     <h3><a href="{{ url_for('profile', username = current_user.username) }}">My Profile</a></h3>
     <h3><a href="{{ url_for('settings') }}">Settings</a></h3>
     <h3><a href="{{ url_for('logout') }}">Log out</a></h3>
