--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -46,3 +46,43 @@
         <a href="{{ url_for('logout') }}" class="menu-link"><div class="menu-item">Log Out</div></a>
     </div>
 {%- endmacro %}
+
+{% macro user_post(user, title="", content="", desc="", footer="") -%}
+    <div class="post">
+        <div class="post-title">
+            <table><tr>
+                <td class="user-av-med">
+                    <a href="{{ url_for('profile', username = user.username) }}">
+                        <img src="{{ user.avatar_url }}" class="user-av-med"></a></td>
+                <td style="padding-left: 1em;">
+                    <a href="{{ url_for('profile', username = user.username) }}" class="small-text" style="text-decoration: none;">
+                        {{ user.username }} / category</a><br>
+                    {% if title %}
+                        <span style="font-size: 2em;">{{ title }}</span>
+                    {% endif %}
+                </td>
+            </tr></table>
+        </div>
+
+        {% if content %}
+            <div class="post-content">
+                image here
+            </div>
+        {% endif %}
+
+        {% if desc %}
+            <div class="post-desc">
+                <div class="user-av-med" style="text-align: center;"><img src="{{ user.avatar_url }}" class="user-av-med"><br>{{ user.display_name }}</div>
+                <div style="padding-left: 1em;">
+                    {{ desc }}
+                </div>
+            </div>
+        {% endif %}
+
+        {% if footer %}
+            <div class="post-footer">
+                #something here
+            </div>
+        {% endif %}
+    </div>
+{%- endmacro %}
