--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% from "macros.html" import user_post%}
 
 {% block content_header %}
     <div class="prof-header">
@@ -12,8 +13,6 @@
 
 {% block content %}
     {% for post in posts %}
-        <p>
-            {{ post.author.username }} says: <b>{{ post.body }}</b>
-        </p>
+        <p>{{ user_post(user, title=post.title, desc=post.desc)}}</p>
     {% endfor %}
 {% endblock %}
