--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -18,7 +18,7 @@
 {% macro footer_link(text, url, svg_path) -%}
     <span class="footer-link">
         {% if svg_path %}
-            <div class="footer-icon">
+            <div class="svg-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24">
                     <title>{{ text }}</title>
                     <path d="{{ svg_path }}"></path>
@@ -49,12 +49,12 @@
 
 {% macro user_post(p) -%}
     <div class="post">
-        <div class="post-title">
+        <div class="post-title-container">
             <table><tr>
                 <td class="user-av-med">
                     <a href="{{ url_for('profile', username = p.author.username) }}">
                         <img src="{{ p.author.avatar_url }}" class="user-av-med"></a></td>
-                <td style="padding-left: 1em;">
+                <td class="post-title">
                     <a href="{{ url_for('profile', username = p.author.username) }}" class="small-text" style="text-decoration: none;">
                         {{ p.author.username }} / category</a><br>
                     <span style="font-size: 2em;">{{ p.title }}</span><br>
@@ -78,15 +78,22 @@
             </div>
         {% endif %}
         <div class="post-footer">
-            Like, comment, share
-            <br>
             {% if p.author == current_user %}
+                <td>
+                    <svg class="post-options-menu" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29.96 122.88">
+                        <title>Options</title>
+                        <path d="M15,0A15,15,0,1,1,0,15,15,15,0,0,1,15,0Zm0,92.93a15,15,0,1,1-15,15,15,15,0,0,1,15-15Zm0-46.47a15,15,0,1,1-15,15,15,15,0,0,1,15-15Z"/>
+                    </svg>
+                </td>
                 <form action="" method="POST">
                     {{ del_form.csrf_token() }}
                     {{ del_form.del_id(value=p.id) }}
                     {{ del_form.del_post }}
                 </form>
             {% endif %}
+            Like, comment, share
+            <br>
+            
         </div>
     </div>
 {%- endmacro %}
