--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -95,7 +95,7 @@
                     {{ del_form.del_post }}
                 </form>
             {% endif %}
-            Like, comment, share
+            (>) comment, like
             <br>
             
         </div>
