--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% from "macros.html" import search_bar%}
+{% from "macros.html" import search_bar, user_avatar_linked %}
 
 <!-- SEARCH BAR -->
 {% block content_header %}
@@ -10,8 +10,7 @@
     <div style="background-color: var(--color-header);">
         <table>
             <td class="user-av-med" style="padding: 0.5em">
-                <a href="{{ url_for('profile', username = current_user.username) }}">
-                    <img src="{{ current_user.avatar_url }}" class="user-av-med"></a>
+                {{ user_avatar_linked(current_user) }}
             </td>
             <td style="padding: 0.5em">
                 Hi, {{ current_user.display_name }}. Let's get stalking!
