--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -101,3 +101,8 @@
         </div>
     </div>
 {%- endmacro %}
+
+{% macro user_avatar_linked(user) -%}
+    <a href="{{ url_for('profile', username = user.username) }}">
+        <img src="{{ user.avatar_url }}" class="user-av-med"></a>
+{%- endmacro %}
