--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
                     <style type="text/css">.st0{fill-rule:evenodd;clip-rule:evenodd;}</style>
                     <g><path class="st0" d="M122.88,0v20.05H33.2V0H122.88L122.88,0z M21.13,76.86v20.05H0V76.86H21.13L21.13,76.86z M21.13,38.43v20.05H0 V38.43H21.13L21.13,38.43z M21.13,0v20.05H0V0H21.13L21.13,0z M122.88,76.86v20.05H33.2V76.86H122.88L122.88,76.86z M122.88,38.43 v20.05H33.2V38.43H122.88L122.88,38.43z"/></g></svg>
                 </div>
-                {{ user_avatar_linked(current_user) }}
+                <div class="header-prof-av">{{ user_avatar_linked(current_user) }}</div>
                 {{ menu_window() }}
             {% endif %}
         </div>
